fix: remove horizontal scroll on image

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,6 @@
 
 .homepage {
     background-image: url('/bg-img.jpg');
-    @apply w-screen h-screen bg-no-repeat bg-center bg-cover opacity-90
+    @apply w-screen h-screen bg-no-repeat bg-center bg-cover opacity-90 overflow-x-hidden
 }
 
